respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Freight_payable_at__c</fullName>
        <label>Freight payable at</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ORIGIN</fullName>
                </value>
                <value>
                    <fullName>DESTINATION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Time_Delivery__c</fullName>
        <label>Google Time (Delivery)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Time__c</fullName>
        <label>Google Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAWB_Number__c</fullName>
        <label>HAWB Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HBL_Number_Replace__c</fullName>
        <formula>SUBSTITUTE( HBL_Number__c , &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HBL Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HBL_Number__c</fullName>
        <label>HBL Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hazardous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Horas_totales_en_ruta__c</fullName>
        <formula>Kms__c/60</formula>
        <label>Horas totales en ruta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IHC_Inland_Haulage_Charges__c</fullName>
        <label>IHC (Inland Haulage Charges)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL TRUCK</fullName>
                </value>
                <value>
                    <fullName>RAIL TRUCK</fullName>
                </value>
                <value>
                    <fullName>TRUCK-PTO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Imo_Number__c</fullName>
        <label>OI Imo Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Consolidation_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipments Program</label>
        <referenceTo>Shipment_Program__c</referenceTo>
        <relationshipLabel>Shipments (Included in this Program)</relationshipLabel>
        <relationshipName>Shipments_Included_In_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incidencias__c</fullName>
        <label>Incidencias</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A - No Autorizado</fullName>
                </value>
                <value>
                    <fullName>F - Validacion tardía</fullName>
                </value>
                <value>
                    <fullName>X - Robado</fullName>
                </value>
                <value>
                    <fullName>L - Siniestro Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoterm_Place__c</fullName>
        <label>Incoterm Place</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inicio_Devolucion_Fecha__c</fullName>
        <description>Captura la fecha y hora de cuando se inicia la devolución</description>
        <label>Fecha Inicio Devolución</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instruction_Letter_Notes__c</fullName>
        <label>Instruction Letter Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interbodegas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interbodega</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_date__c</fullName>
        <label>Invoice date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kms_Destination__c</fullName>
        <label>Kms Discharge</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kms_Origin__c</fullName>
        <label>Kms Load</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kms__c</fullName>
        <label>Kms</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kms_totales__c</fullName>
        <formula>Route__r.Kms__c</formula>
        <label>Kms totales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <label>OI Last Activity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_ETD_DATE_Impo__c</fullName>
        <label>Last Modified ETD Impo date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_ETD_Expo_date__c</fullName>
        <label>Last Modified ETD Expo date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Update_Vessel__c</fullName>
        <formula>Truck_Vessel_Flight__r.Last_Update__c</formula>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Liga_Cuenta_Espejo__c</fullName>
        <label>Liga Cuenta Espejo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Loading_Time_Hours__c</fullName>
        <description>Difference between &quot;Equip. Loaded&quot; and &quot;Equip. Placed&quot;</description>
        <formula>IF(ISNULL(Equip_Loaded__c), ( NOW() - Equip_Placed__c) * 24, ( Equip_Loaded__c  -  Equip_Placed__c )*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between &quot;Equip. Loaded&quot; and &quot;Equip. Placed&quot;</inlineHelpText>
        <label>Loading Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>OI Location Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>OI Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAWB_Number__c</fullName>
        <label>MAWB Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBL_Number__c</fullName>
        <label>MBL Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMSI__c</fullName>
        <label>OI MMSI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_at_Destination_by_Default__c</fullName>
        <label>Margin at Destination by Default</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marketplace_Auction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if you want this shipment to be displayed on the Freight Marketplace.</inlineHelpText>
        <label>Freight Rates Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meta_Fletes__c</fullName>
        <formula>Account_for__r.Owner.Meta_Fletes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meta Fletes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Mar__c</fullName>
        <formula>Account_for__r.Tot_Acum_Fact_19__r.TGT_Mar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meta -Mar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_Planner__c</fullName>
        <formula>Account_Origin_Address__r.Id &amp; &quot;|&quot; &amp; Account_Destination_Address__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORDN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_Lightning__c</fullName>
        <formula>CASE(TEXT(Freight_Mode__c), &apos;Sea&apos;, &apos;custom:custom54&apos;, &apos;Air&apos;, &apos;custom:custom20&apos;, &apos;Road&apos;, &apos;custom:custom98&apos;, &apos;custom:custom36&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mode Lightning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <description>Animation based on &quot;Freight Mode&quot; selection; if &quot;Freight Mode&quot; = Sea then Ship Image, else if &quot;Freight Mode&quot; = Air then Plane Image, else if &quot;Freight Mode&quot; = Road then Truck Image, else if &quot;Freight Mode&quot; = Rail then Train Image, else if &quot;Freight Mode&quot; = Multimodal then Ship and Train Images</description>
        <formula>IF(TEXT(Freight_Mode__c) = &apos;Sea&apos;, IMAGE(&apos;/img/icon/custom51_100/ship32.png&apos;, &apos;Sea&apos;), IF(TEXT(Freight_Mode__c) = &apos;Air&apos;, IMAGE(&apos;/img/icon/plane32.png&apos;, &apos;Air&apos;), IF(TEXT(Freight_Mode__c) = &apos;Road&apos;, IMAGE(&apos;/img/icon/custom51_100/truck32.png&apos;, &apos;Road&apos;), IF( TEXT(Freight_Mode__c) = &apos;Rail&apos;, IMAGE(&apos;/img/icon/train32.png&apos;, &apos;Rail&apos;), IF( TEXT(Freight_Mode__c) = &apos;Multimodal&apos;, IMAGE(&apos;/img/icon/custom51_100/ship32.png&apos;, &apos;Multimodal&apos;)&amp; &quot; &quot; &amp; IMAGE(&apos;/img/icon/train32.png&apos;, &apos;Multimodal&apos;) ,&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modification_Status_Flight_confirmation__c</fullName>
        <label>Modification day &quot;Flight confirmation&quot;</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Modifico_Status_Planner__c</fullName>
        <label>Modificó Status Planner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoreo_Executive__c</fullName>
        <label>Monitoreo Executive</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marcella Gandara</fullName>
                </value>
                <value>
                    <fullName>Talia Sanchez</fullName>
                </value>
                <value>
                    <fullName>Nallely Rincon</fullName>
                </value>
                <value>
                    <fullName>Rodolfo Gomez</fullName>
                </value>
                <value>
                    <fullName>Victor Hernandez</fullName>
                </value>
                <value>
                    <fullName>Milton Morales</fullName>
                </value>
                <value>
                    <fullName>Marcela Rodriguez</fullName>
                </value>
                <value>
                    <fullName>Israel Garcia</fullName>
                </value>
                <value>
                    <fullName>Flor Santos</fullName>
                </value>
                <value>
                    <fullName>Edgar Rios</fullName>
                </value>
                <value>
                    <fullName>Mario Gonzalez</fullName>
                </value>
                <value>
                    <fullName>Pablo Piedad</fullName>
                </value>
                <value>
                    <fullName>Yuliana Silva</fullName>
                </value>
                <value>
                    <fullName>Brenda Alvarado</fullName>
                </value>
                <value>
                    <fullName>Eder Gzz</fullName>
                </value>
                <value>
                    <fullName>Elsa Rios</fullName>
                </value>
                <value>
                    <fullName>Fabian Fonseca</fullName>
                </value>
                <value>
                    <fullName>Iliana Garcia</fullName>
                </value>
                <value>
                    <fullName>Jahir Alvarez</fullName>
                </value>
                <value>
                    <fullName>Josaffat Mellado</fullName>
                </value>
                <value>
                    <fullName>Leticia Tovar</fullName>
                </value>
                <value>
                    <fullName>Osiris Cornejo</fullName>
                </value>
                <value>
                    <fullName>Yatcidi Rodriguez</fullName>
                </value>
                <value>
                    <fullName>Eduardo Mota</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monitoreo_Recepci_n_Acuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monitoreo Recepción Acuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monto_de_mercancia__c</fullName>
        <label>Monto de Devolución</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Motivo_de__c</fullName>
        <label>Motivo de Devolución</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Causante_de_Devoluci_n__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Faltante de Origen</fullName>
                </value>
                <value>
                    <fullName>Excedente de Mercancía</fullName>
                </value>
                <value>
                    <fullName>Códigos Erróneos</fullName>
                </value>
                <value>
                    <fullName>Rechazos</fullName>
                </value>
                <value>
                    <fullName>Daño de Mercancía</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_Type__c</fullName>
        <label>Move Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Door to Door</fullName>
                </value>
                <value>
                    <fullName>Door to Port</fullName>
                </value>
                <value>
                    <fullName>Port to Door</fullName>
                </value>
                <value>
                    <fullName>Port to Port</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NUM_Total_Invoiced_Cargo__c</fullName>
        <label>NUM Total Invoiced Cargo</label>
        <summarizedField>Shipment_Line__c.Total_Amount_Invoiced_header_currency__c</summarizedField>
        <summaryForeignKey>Shipment_Line__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NUM_Total_Invoiced_Service__c</fullName>
        <label>NUM Total Invoiced Service</label>
        <summarizedField>Shipment_Fee_Line__c.Total_Amount_Invoiced_header_currency__c</summarizedField>
        <summaryForeignKey>Shipment_Fee_Line__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_Containers__c</fullName>
        <label>Container Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_Cliente__c</fullName>
        <label>Final Client</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator 1</label>
        <referenceTo>Operadores__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nature_Merchandise__c</fullName>
        <label>Nature Merchandise</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nivel_de_CARGA_Insatisfactorio__c</fullName>
        <formula>IF(Nivel_de_servicio_CARGA__c = &quot;Insatisfactorio&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Nivel de CARGA Insatisfactorio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nivel_de_CARGA__c</fullName>
        <formula>IF(Nivel_de_servicio_CARGA__c = &quot;Satisfactorio&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Nivel de CARGA Satisfactorio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nivel_de_DESCARGA_Insatisfactorio__c</fullName>
        <formula>IF( Nivel_de_servicio_DESCARGA__c = &quot;Insatisfactorio&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Nivel de DESCARGA Insatisfactorio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nivel_de_DESCARGA__c</fullName>
        <formula>IF( Nivel_de_servicio_DESCARGA__c = &quot;Satisfactorio&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Nivel de DESCARGA Satisfactorio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nivel_de_servicio_CARGA__c</fullName>
        <formula>IF(  Tiempo_de_diferencia_en_carga__c &lt;= 1, &quot;Satisfactorio&quot;, &quot;Insatisfactorio&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nivel de servicio CARGA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nivel_de_servicio_DESCARGA__c</fullName>
        <formula>IF(  Tiempo_de_diferencia_en_descarga__c   &lt;= 1, &quot;Satisfactorio&quot;, &quot;Insatisfactorio&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nivel de servicio DESCARGA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificarGastoExtra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notificar Gasto Extra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notify Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments (Notify Party)</relationshipLabel>
        <relationshipName>Shipments_Notify_Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Num_Placa_Tracto__c</fullName>
        <formula>Vehicle__r.Num_Placa_Tracto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num Placa Tracto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_Guia__c</fullName>
        <label>Numero de Guia</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_SAP__c</fullName>
        <label>OC SAP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Status_Code__c</fullName>
        <label>OI Status Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Status__c</fullName>
        <label>OI Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OK_FACTURAR_FI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OK FACTURAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTD__c</fullName>
        <label>OTD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Siniestro</fullName>
                </value>
                <value>
                    <fullName>Seguimiento SAC- Cita quemada</fullName>
                </value>
                <value>
                    <fullName>Carga Tarde Cliente</fullName>
                </value>
                <value>
                    <fullName>Carga Tarde Proveedor</fullName>
                </value>
                <value>
                    <fullName>Resguardo</fullName>
                </value>
                <value>
                    <fullName>Tráfico</fullName>
                </value>
                <value>
                    <fullName>Falla mecánica</fullName>
                </value>
                <value>
                    <fullName>Error de Captura (Cita)</fullName>
                </value>
                <value>
                    <fullName>Error de Captura (Arrival)</fullName>
                </value>
                <value>
                    <fullName>Cita quemada</fullName>
                    <isActive>false</isActive>
                    <label>Cita quemada</label>
                </value>
                <value>
                    <fullName>Error de registro</fullName>
                    <isActive>false</isActive>
                    <label>Error de registro</label>
                </value>
                <value>
                    <fullName>Falla operativa</fullName>
                    <isActive>false</isActive>
                    <label>Falla operativa</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTP__c</fullName>
        <label>OTP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Siniestro</fullName>
                </value>
                <value>
                    <fullName>No se liberó de carga anterior</fullName>
                </value>
                <value>
                    <fullName>Interno de Proveedor</fullName>
                </value>
                <value>
                    <fullName>Seguimiento Planner</fullName>
                </value>
                <value>
                    <fullName>Trafico</fullName>
                </value>
                <value>
                    <fullName>Error de Captura (Cita)</fullName>
                </value>
                <value>
                    <fullName>Error de Captura (Placed Time)</fullName>
                </value>
                <value>
                    <fullName>Remplazo</fullName>
                </value>
                <value>
                    <fullName>Falla mecánica</fullName>
                </value>
                <value>
                    <fullName>Cita quemada</fullName>
                    <isActive>false</isActive>
                    <label>Cita quemada</label>
                </value>
                <value>
                    <fullName>Error de registro</fullName>
                    <isActive>false</isActive>
                    <label>Error de registro</label>
                </value>
                <value>
                    <fullName>Falla operativa</fullName>
                    <isActive>false</isActive>
                    <label>Falla operativa</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Observacion_Recepci_n_Acuse__c</fullName>
        <label>Guia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocean_Shipment_Status__c</fullName>
        <label>Ocean Impo Shipment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Booking Confirmation</fullName>
                </value>
                <value>
                    <fullName>Pickup Confirmation</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>ETD</fullName>
                </value>
                <value>
                    <fullName>ETA-15</fullName>
                </value>
                <value>
                    <fullName>ETA-10</fullName>
                </value>
                <value>
                    <fullName>ETA-7</fullName>
                </value>
                <value>
                    <fullName>ETA-4</fullName>
                </value>
                <value>
                    <fullName>ETA</fullName>
                </value>
                <value>
                    <fullName>Telex Confirmation</fullName>
                </value>
                <value>
                    <fullName>Customs Clearences</fullName>
                </value>
                <value>
                    <fullName>Final Delivery</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Pending Information</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Transport Request</fullName>
                </value>
                <value>
                    <fullName>Empty Continer Return</fullName>
                </value>
                <value>
                    <fullName>ETA -2</fullName>
                </value>
                <value>
                    <fullName>CNEE</fullName>
                </value>
                <value>
                    <fullName>EIR</fullName>
                </value>
                <value>
                    <fullName>Demurrage cut</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Booking Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Only_Warehouse_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Warehouse Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operador_Validado__c</fullName>
        <formula>National_Operator__r.Validado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operador Validado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation_Executive_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation Executive 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator 2</label>
        <referenceTo>Operadores__c</referenceTo>
        <relationshipLabel>Shipments (Operator 2)</relationshipLabel>
        <relationshipName>Shipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator_Name__c</fullName>
        <formula>National_Operator__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>OI Operator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrdenVenta__c</fullName>
        <label>Orden de Venta</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orden_de_Compra__c</fullName>
        <label>P.O. NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Margen_Operativo__c</fullName>
        <label>Margen Operativo %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin_Address_Latitude__c</fullName>
        <label>Origin Address Latitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Address_Longitude__c</fullName>
        <label>Origin Address Longitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Address_Shipment__c</fullName>
        <label>Origin Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origin_Address__c</fullName>
        <label>Pickup Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Origin_Airport__c</fullName>
        <label>Origin Airport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABA</fullName>
                </value>
                <value>
                    <fullName>ABD</fullName>
                </value>
                <value>
                    <fullName>ABJ</fullName>
                </value>
                <value>
                    <fullName>ACC</fullName>
                </value>
                <value>
                    <fullName>ACE</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>ADE</fullName>
                </value>
                <value>
                    <fullName>ADL</fullName>
                </value>
                <value>
                    <fullName>ADZ</fullName>
                </value>
                <value>
                    <fullName>AGP</fullName>
                </value>
                <value>
                    <fullName>AJU</fullName>
                </value>
                <value>
                    <fullName>AKL</fullName>
                </value>
                <value>
                    <fullName>ALC</fullName>
                </value>
                <value>
                    <fullName>ALG</fullName>
                </value>
                <value>
                    <fullName>ALP</fullName>
                </value>
                <value>
                    <fullName>ALT</fullName>
                </value>
                <value>
                    <fullName>ALY</fullName>
                </value>
                <value>
                    <fullName>AMM</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>ANC</fullName>
                </value>
                <value>
                    <fullName>ANF</fullName>
                </value>
                <value>
                    <fullName>ANK</fullName>
                </value>
                <value>
                    <fullName>ANR</fullName>
                </value>
                <value>
                    <fullName>APW</fullName>
                </value>
                <value>
                    <fullName>AQP</fullName>
                </value>
                <value>
                    <fullName>ARH</fullName>
                </value>
                <value>
                    <fullName>ARI</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>ASU</fullName>
                </value>
                <value>
                    <fullName>ATL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin_Code__c</fullName>
        <label>OI Origin Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Location__c</fullName>
        <label>Origin Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>OI Origin</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>